RESOLVED FIXED91612
IndexedDB: IDBLevelDBBackingStore compilation fails because of unused variable.
https://bugs.webkit.org/show_bug.cgi?id=91612
Summary IndexedDB: IDBLevelDBBackingStore compilation fails because of unused variable.
Vsevolod Vlasov
Reported 2012-07-18 03:48:57 PDT
chromeos-chrome-22.0.1211.0_alpha-r1: third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBLevelDBBackingStore.cpp: In member function 'virtual void WebCore::IDBLevelDBBackingStore::getObjectStores(int64_t, WTF::Vector<long long int>&, WTF::Vector<WTF::String>&, WTF::Vector<WebCore::IDBKeyPath>&, WTF::Vector<bool>&)': chromeos-chrome-22.0.1211.0_alpha-r1: third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBLevelDBBackingStore.cpp:420:17: error: variable 'keyGeneratorCurrentNumber' set but not used [-Werror=unused-but-set-variable] chromeos-chrome-22.0.1211.0_alpha-r1: cc1plus: all warnings being treated as errors chromeos-chrome-22.0.1211.0_alpha-r1: make: *** [c/Release/obj.target/webcore_remaining/third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBLevelDBBackingStore.o] Error 1 chromeos-chrome-22.0.1211.0_alpha-r1: make: *** Waiting for unfinished jobs.... chromeos-chrome-22.0.1211.0_alpha-r1: emake failed http://build.chromium.org/p/chromium.chromiumos/waterfall?builder=ChromiumOS%20%28x86%29
Attachments
Patch (1.75 KB, patch)
2012-07-18 03:51 PDT, Vsevolod Vlasov
pfeldman: review+
Vsevolod Vlasov
Comment 1 2012-07-18 03:51:08 PDT
Vsevolod Vlasov
Comment 2 2012-07-18 03:54:43 PDT
Nayan Kumar K
Comment 3 2012-07-18 05:32:19 PDT
*** Bug 91619 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.