IndexedDB: IDBLevelDBBackingStore compilation fails because of unused variable. https://bugs.webkit.org/show_bug.cgi?id=91612

Reviewed by Pavel Feldman.

Replaced ASSERT with ASSERT_UNUSED.

* Modules/indexeddb/IDBLevelDBBackingStore.cpp:
(WebCore::IDBLevelDBBackingStore::getObjectStores):

Canonical link: https://commits.webkit.org/109400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122942 268f45cc-cd09-0410-ab3c-d52691b4dbfc